fix(python314): resolve conflict with system python3
- Add no-provides option to prevent so:libpython3.so auto-detection
- Remove unversioned libpython3.so symlink
- Remove unversioned binary symlinks (python3, python, etc.)
- Bump epoch to 1

--- a/python314.yaml
+++ b/python314.yaml
@@ -1,12 +1,13 @@
 package:
   name: python314
   version: 3.14.2
-  epoch: 0
+  epoch: 1
   description: "Python 3.14 - High-level scripting language"
   copyright:
     - license: PSF-2.0
   options:
     no-depends: true
+    no-provides: true
   dependencies:
     runtime:
       - libffi
@@ -123,14 +124,11 @@ pipeline:
       rm -rf "${{targets.destdir}}"/usr/lib/python3.14/*/test
       rm -rf "${{targets.destdir}}"/usr/lib/python3.14/*/tests
 
-      # Create unversioned symlinks
-      cd "${{targets.destdir}}"/usr/bin
-      ln -sf python3.14 python3
-      ln -sf python3.14 python
-      ln -sf python3.14-config python3-config
-      ln -sf python3.14-config python-config
-      ln -sf pydoc3.14 pydoc3
-      ln -sf pydoc3.14 pydoc
+      # Remove unversioned libpython3.so symlink to avoid conflict with system python3
+      rm -f "${{targets.destdir}}"/usr/lib/libpython3.so
+
+      # Note: We don't create unversioned symlinks (python3, python, etc.)
+      # to avoid conflicts with system python3. Use python3.14 explicitly.
 
 test:
   environment:
