--- a/.github/workflows/build.yaml
+++ b/.github/workflows/build.yaml
@@ -37,6 +37,7 @@ jobs:
       build-occu-webui: ${{ steps.matrix.outputs.build-occu-webui }}
       build-pivccu-modules-dkms: ${{ steps.matrix.outputs.build-pivccu-modules-dkms }}
       build-home-assistant: ${{ steps.matrix.outputs.build-home-assistant }}
+      build-home-assistant-container: ${{ steps.matrix.outputs.build-home-assistant-container }}
       build-zwave-js-ui: ${{ steps.matrix.outputs.build-zwave-js-ui }}
       build-python314: ${{ steps.matrix.outputs.build-python314 }}
       any-builds: ${{ steps.matrix.outputs.any-builds }}
@@ -79,6 +80,9 @@ jobs:
             home-assistant:
               - 'home-assistant.yaml'
               - 'home-assistant/**'
+            home-assistant-container:
+              - 'home-assistant-container.yaml'
+              - 'home-assistant-container/**'
             zwave-js-ui:
               - 'zwave-js-ui.yaml'
               - 'zwave-js-ui/**'
@@ -120,7 +124,7 @@ jobs:
           }
 
           # Check each package
-          for pkg in zap-cli chip-sdk matter-server otbr prusalink detect-radio-module gcompat-custom occu occu-java occu-webui pivccu-modules-dkms home-assistant zwave-js-ui python314; do
+          for pkg in zap-cli chip-sdk matter-server otbr prusalink detect-radio-module gcompat-custom occu occu-java occu-webui pivccu-modules-dkms home-assistant home-assistant-container zwave-js-ui python314; do
             yaml_ver=$(get_yaml_version "$pkg")
             published_ver=$(get_published_version "$pkg")
 
@@ -151,6 +155,7 @@ jobs:
           FILE_OCCU_WEBUI: ${{ steps.file-changes.outputs.occu-webui }}
           FILE_PIVCCU_DKMS: ${{ steps.file-changes.outputs.pivccu-modules-dkms }}
           FILE_HOME_ASSISTANT: ${{ steps.file-changes.outputs.home-assistant }}
+          FILE_HOME_ASSISTANT_CONTAINER: ${{ steps.file-changes.outputs.home-assistant-container }}
           FILE_ZWAVE_JS_UI: ${{ steps.file-changes.outputs.zwave-js-ui }}
           FILE_PYTHON314: ${{ steps.file-changes.outputs.python314 }}
           FILE_WORKFLOW: ${{ steps.file-changes.outputs.workflow }}
@@ -166,6 +171,7 @@ jobs:
           VERSION_OCCU_WEBUI: ${{ steps.version-check.outputs.occu_webui_version_changed }}
           VERSION_PIVCCU_DKMS: ${{ steps.version-check.outputs.pivccu_modules_dkms_version_changed }}
           VERSION_HOME_ASSISTANT: ${{ steps.version-check.outputs.home_assistant_version_changed }}
+          VERSION_HOME_ASSISTANT_CONTAINER: ${{ steps.version-check.outputs.home_assistant_container_version_changed }}
           VERSION_ZWAVE_JS_UI: ${{ steps.version-check.outputs.zwave_js_ui_version_changed }}
           VERSION_PYTHON314: ${{ steps.version-check.outputs.python314_version_changed }}
           REBUILD_ALL: ${{ inputs.rebuild_all }}
@@ -184,6 +190,7 @@ jobs:
           build_occu_webui="false"
           build_pivccu_dkms="false"
           build_home_assistant="false"
+          build_home_assistant_container="false"
           build_zwave_js_ui="false"
           build_python314="false"
 
@@ -202,6 +209,7 @@ jobs:
             build_occu_webui="true"
             build_pivccu_dkms="true"
             build_home_assistant="true"
+            build_home_assistant_container="true"
             build_zwave_js_ui="true"
             build_python314="true"
           else
@@ -302,6 +310,14 @@ jobs:
               fi
             fi
 
+            if [[ "$FILE_HOME_ASSISTANT_CONTAINER" == "true" ]]; then
+              if [[ "$VERSION_HOME_ASSISTANT_CONTAINER" == "true" ]]; then
+                build_home_assistant_container="true"
+              else
+                echo "::warning::home-assistant-container files changed but version not bumped - skipping build"
+              fi
+            fi
+
             if [[ "$FILE_ZWAVE_JS_UI" == "true" ]]; then
               if [[ "$VERSION_ZWAVE_JS_UI" == "true" ]]; then
                 build_zwave_js_ui="true"
@@ -373,11 +389,12 @@ jobs:
           echo "build-occu-webui=$build_occu_webui" >> "$GITHUB_OUTPUT"
           echo "build-pivccu-modules-dkms=$build_pivccu_dkms" >> "$GITHUB_OUTPUT"
           echo "build-home-assistant=$build_home_assistant" >> "$GITHUB_OUTPUT"
+          echo "build-home-assistant-container=$build_home_assistant_container" >> "$GITHUB_OUTPUT"
           echo "build-zwave-js-ui=$build_zwave_js_ui" >> "$GITHUB_OUTPUT"
           echo "build-python314=$build_python314" >> "$GITHUB_OUTPUT"
 
           # Check if any builds needed
-          if [[ "$build_zap" == "true" || "$build_chip" == "true" || "$build_matter" == "true" || "$build_otbr" == "true" || "$build_prusalink" == "true" || "$build_detect_radio" == "true" || "$build_gcompat" == "true" || "$build_occu" == "true" || "$build_occu_java" == "true" || "$build_occu_webui" == "true" || "$build_pivccu_dkms" == "true" || "$build_home_assistant" == "true" || "$build_zwave_js_ui" == "true" || "$build_python314" == "true" ]]; then
+          if [[ "$build_zap" == "true" || "$build_chip" == "true" || "$build_matter" == "true" || "$build_otbr" == "true" || "$build_prusalink" == "true" || "$build_detect_radio" == "true" || "$build_gcompat" == "true" || "$build_occu" == "true" || "$build_occu_java" == "true" || "$build_occu_webui" == "true" || "$build_pivccu_dkms" == "true" || "$build_home_assistant" == "true" || "$build_home_assistant_container" == "true" || "$build_zwave_js_ui" == "true" || "$build_python314" == "true" ]]; then
             echo "any-builds=true" >> "$GITHUB_OUTPUT"
           else
             echo "any-builds=false" >> "$GITHUB_OUTPUT"
@@ -400,6 +417,7 @@ jobs:
           echo "| occu-webui | $build_occu_webui |" >> "$GITHUB_STEP_SUMMARY"
           echo "| pivccu-modules-dkms | $build_pivccu_dkms |" >> "$GITHUB_STEP_SUMMARY"
           echo "| home-assistant | $build_home_assistant |" >> "$GITHUB_STEP_SUMMARY"
+          echo "| home-assistant-container | $build_home_assistant_container |" >> "$GITHUB_STEP_SUMMARY"
           echo "| zwave-js-ui | $build_zwave_js_ui |" >> "$GITHUB_STEP_SUMMARY"
           echo "| python314 | $build_python314 |" >> "$GITHUB_STEP_SUMMARY"
 
@@ -460,6 +478,48 @@ jobs:
       - uses: actions/upload-artifact@v4
         with:
           name: packages-${{ matrix.arch }}-prusalink
+          path: packages/${{ matrix.arch }}
+          if-no-files-found: ignore
+
+  build-home-assistant-container:
+    needs: detect-changes
+    if: needs.detect-changes.outputs.build-home-assistant-container == 'true'
+    runs-on: ${{ matrix.runner }}
+    strategy:
+      fail-fast: true
+      matrix:
+        arch: [x86_64, aarch64]
+        include:
+          - arch: x86_64
+            runner: ubuntu-latest
+          - arch: aarch64
+            runner: ubuntu-24.04-arm
+    steps:
+      - uses: actions/checkout@v4
+
+      - uses: chainguard-dev/actions/setup-melange@main
+        with:
+          version: latest-release
+
+      - name: Setup signing key
+        run: |
+          echo "${{ secrets.ABUILD_PRIVKEY }}" > melange.pem
+          openssl rsa -in melange.pem -out packages@elohmeier.rsa -traditional 2>/dev/null || cp melange.pem packages@elohmeier.rsa
+          chmod 600 packages@elohmeier.rsa
+          rm -f melange.pem
+
+      - name: Build home-assistant-container
+        run: |
+          sudo melange build home-assistant-container.yaml \
+            --arch ${{ matrix.arch }} \
+            --signing-key packages@elohmeier.rsa \
+            --out-dir packages/ \
+            --generate-index=false
+          sudo chown -R runner:runner packages/
+
+      - uses: actions/upload-artifact@v4
+        with:
+          name: packages-${{ matrix.arch }}-home-assistant-container
           path: packages/${{ matrix.arch }}
           if-no-files-found: ignore
 
@@ -1430,7 +1490,7 @@ jobs:
   # Phase 4: Publish to GitHub Pages
   # ===========================================
   publish:
-    needs: [detect-changes, build-prusalink, build-otbr, build-zap-cli, build-chip-sdk, build-matter-server, build-detect-radio-module, build-gcompat-custom, build-occu, build-occu-java, build-occu-webui, build-pivccu-modules-dkms, build-home-assistant, build-zwave-js-ui, build-python314]
+    needs: [detect-changes, build-prusalink, build-home-assistant-container, build-otbr, build-zap-cli, build-chip-sdk, build-matter-server, build-detect-radio-module, build-gcompat-custom, build-occu, build-occu-java, build-occu-webui, build-pivccu-modules-dkms, build-home-assistant, build-zwave-js-ui, build-python314]
     if: |
       always() &&
       github.ref == 'refs/heads/main' &&
