--- a/.github/workflows/build.yaml
+++ b/.github/workflows/build.yaml
@@ -36,7 +36,6 @@ jobs:
       build-occu-java: ${{ steps.matrix.outputs.build-occu-java }}
       build-occu-webui: ${{ steps.matrix.outputs.build-occu-webui }}
       build-pivccu-modules-dkms: ${{ steps.matrix.outputs.build-pivccu-modules-dkms }}
-      build-home-assistant: ${{ steps.matrix.outputs.build-home-assistant }}
       build-home-assistant-container: ${{ steps.matrix.outputs.build-home-assistant-container }}
       build-zwave-js-ui: ${{ steps.matrix.outputs.build-zwave-js-ui }}
       build-python314: ${{ steps.matrix.outputs.build-python314 }}
@@ -77,12 +76,10 @@ jobs:
               - 'occu-webui.yaml'
             pivccu-modules-dkms:
               - 'pivccu-modules-dkms.yaml'
-            home-assistant:
-              - 'home-assistant.yaml'
-              - 'home-assistant/**'
             home-assistant-container:
               - 'home-assistant-container.yaml'
               - 'home-assistant-container/**'
+              - 'scripts/build-diskless-apk.sh'
             zwave-js-ui:
               - 'zwave-js-ui.yaml'
               - 'zwave-js-ui/**'
@@ -124,7 +121,7 @@ jobs:
           }
 
           # Check each package
-          for pkg in zap-cli chip-sdk matter-server otbr prusalink detect-radio-module gcompat-custom occu occu-java occu-webui pivccu-modules-dkms home-assistant home-assistant-container zwave-js-ui python314; do
+          for pkg in zap-cli chip-sdk matter-server otbr prusalink detect-radio-module gcompat-custom occu occu-java occu-webui pivccu-modules-dkms home-assistant-container zwave-js-ui python314; do
             yaml_ver=$(get_yaml_version "$pkg")
             published_ver=$(get_published_version "$pkg")
 
@@ -154,7 +151,6 @@ jobs:
           FILE_OCCU_JAVA: ${{ steps.file-changes.outputs.occu-java }}
           FILE_OCCU_WEBUI: ${{ steps.file-changes.outputs.occu-webui }}
           FILE_PIVCCU_DKMS: ${{ steps.file-changes.outputs.pivccu-modules-dkms }}
-          FILE_HOME_ASSISTANT: ${{ steps.file-changes.outputs.home-assistant }}
           FILE_HOME_ASSISTANT_CONTAINER: ${{ steps.file-changes.outputs.home-assistant-container }}
           FILE_ZWAVE_JS_UI: ${{ steps.file-changes.outputs.zwave-js-ui }}
           FILE_PYTHON314: ${{ steps.file-changes.outputs.python314 }}
@@ -170,7 +166,6 @@ jobs:
           VERSION_OCCU_JAVA: ${{ steps.version-check.outputs.occu_java_version_changed }}
           VERSION_OCCU_WEBUI: ${{ steps.version-check.outputs.occu_webui_version_changed }}
           VERSION_PIVCCU_DKMS: ${{ steps.version-check.outputs.pivccu_modules_dkms_version_changed }}
-          VERSION_HOME_ASSISTANT: ${{ steps.version-check.outputs.home_assistant_version_changed }}
           VERSION_HOME_ASSISTANT_CONTAINER: ${{ steps.version-check.outputs.home_assistant_container_version_changed }}
           VERSION_ZWAVE_JS_UI: ${{ steps.version-check.outputs.zwave_js_ui_version_changed }}
           VERSION_PYTHON314: ${{ steps.version-check.outputs.python314_version_changed }}
@@ -189,7 +184,6 @@ jobs:
           build_occu_java="false"
           build_occu_webui="false"
           build_pivccu_dkms="false"
-          build_home_assistant="false"
           build_home_assistant_container="false"
           build_zwave_js_ui="false"
           build_python314="false"
@@ -208,7 +202,6 @@ jobs:
             build_occu_java="true"
             build_occu_webui="true"
             build_pivccu_dkms="true"
-            build_home_assistant="true"
             build_home_assistant_container="true"
             build_zwave_js_ui="true"
             build_python314="true"
@@ -302,14 +295,6 @@ jobs:
               fi
             fi
 
-            if [[ "$FILE_HOME_ASSISTANT" == "true" ]]; then
-              if [[ "$VERSION_HOME_ASSISTANT" == "true" ]]; then
-                build_home_assistant="true"
-              else
-                echo "::warning::home-assistant files changed but version not bumped - skipping build"
-              fi
-            fi
-
             if [[ "$FILE_HOME_ASSISTANT_CONTAINER" == "true" ]]; then
               if [[ "$VERSION_HOME_ASSISTANT_CONTAINER" == "true" ]]; then
                 build_home_assistant_container="true"
@@ -370,12 +355,6 @@ jobs:
             build_occu_webui="true"
           fi
 
-          # If python314 rebuilds, home-assistant must rebuild (build-time dependency)
-          if [[ "$build_python314" == "true" && "$build_home_assistant" != "true" ]]; then
-            echo "::notice::home-assistant will rebuild due to python314 dependency"
-            build_home_assistant="true"
-          fi
-
           # Output results
           echo "build-zap-cli=$build_zap" >> "$GITHUB_OUTPUT"
           echo "build-chip-sdk=$build_chip" >> "$GITHUB_OUTPUT"
@@ -388,13 +367,12 @@ jobs:
           echo "build-occu-java=$build_occu_java" >> "$GITHUB_OUTPUT"
           echo "build-occu-webui=$build_occu_webui" >> "$GITHUB_OUTPUT"
           echo "build-pivccu-modules-dkms=$build_pivccu_dkms" >> "$GITHUB_OUTPUT"
-          echo "build-home-assistant=$build_home_assistant" >> "$GITHUB_OUTPUT"
           echo "build-home-assistant-container=$build_home_assistant_container" >> "$GITHUB_OUTPUT"
           echo "build-zwave-js-ui=$build_zwave_js_ui" >> "$GITHUB_OUTPUT"
           echo "build-python314=$build_python314" >> "$GITHUB_OUTPUT"
 
           # Check if any builds needed
-          if [[ "$build_zap" == "true" || "$build_chip" == "true" || "$build_matter" == "true" || "$build_otbr" == "true" || "$build_prusalink" == "true" || "$build_detect_radio" == "true" || "$build_gcompat" == "true" || "$build_occu" == "true" || "$build_occu_java" == "true" || "$build_occu_webui" == "true" || "$build_pivccu_dkms" == "true" || "$build_home_assistant" == "true" || "$build_home_assistant_container" == "true" || "$build_zwave_js_ui" == "true" || "$build_python314" == "true" ]]; then
+          if [[ "$build_zap" == "true" || "$build_chip" == "true" || "$build_matter" == "true" || "$build_otbr" == "true" || "$build_prusalink" == "true" || "$build_detect_radio" == "true" || "$build_gcompat" == "true" || "$build_occu" == "true" || "$build_occu_java" == "true" || "$build_occu_webui" == "true" || "$build_pivccu_dkms" == "true" || "$build_home_assistant_container" == "true" || "$build_zwave_js_ui" == "true" || "$build_python314" == "true" ]]; then
             echo "any-builds=true" >> "$GITHUB_OUTPUT"
           else
             echo "any-builds=false" >> "$GITHUB_OUTPUT"
@@ -416,7 +394,6 @@ jobs:
           echo "| occu-java | $build_occu_java |" >> "$GITHUB_STEP_SUMMARY"
           echo "| occu-webui | $build_occu_webui |" >> "$GITHUB_STEP_SUMMARY"
           echo "| pivccu-modules-dkms | $build_pivccu_dkms |" >> "$GITHUB_STEP_SUMMARY"
-          echo "| home-assistant | $build_home_assistant |" >> "$GITHUB_STEP_SUMMARY"
           echo "| home-assistant-container | $build_home_assistant_container |" >> "$GITHUB_STEP_SUMMARY"
           echo "| zwave-js-ui | $build_zwave_js_ui |" >> "$GITHUB_STEP_SUMMARY"
           echo "| python314 | $build_python314 |" >> "$GITHUB_STEP_SUMMARY"
@@ -1285,97 +1262,6 @@ jobs:
           path: packages/${{ matrix.arch }}
           if-no-files-found: ignore
 
-  build-home-assistant:
-    needs: [detect-changes, build-python314]
-    if: |
-      always() &&
-      needs.detect-changes.outputs.build-home-assistant == 'true' &&
-      (needs.build-python314.result == 'success' || needs.build-python314.result == 'skipped')
-    runs-on: ${{ matrix.runner }}
-    strategy:
-      fail-fast: true
-      matrix:
-        arch: [x86_64, aarch64]
-        include:
-          - arch: x86_64
-            runner: ubuntu-latest
-          - arch: aarch64
-            runner: ubuntu-24.04-arm
-    steps:
-      - uses: actions/checkout@v4
-
-      - uses: chainguard-dev/actions/setup-melange@main
-        with:
-          version: latest-release
-
-      - name: Setup signing key
-        run: |
-          echo "${{ secrets.ABUILD_PRIVKEY }}" > melange.pem
-          openssl rsa -in melange.pem -out packages@elohmeier.rsa -traditional 2>/dev/null || cp melange.pem packages@elohmeier.rsa
-          openssl rsa -in packages@elohmeier.rsa -pubout -out packages@elohmeier.rsa.pub
-          chmod 600 packages@elohmeier.rsa
-          rm -f melange.pem
-
-      - name: Setup cache directory
-        run: |
-          mkdir -p cache
-          sudo chmod 777 cache
-
-      - uses: actions/cache@v4
-        with:
-          path: cache
-          key: melange-home-assistant-${{ matrix.arch }}-${{ hashFiles('home-assistant.yaml') }}
-          restore-keys: |
-            melange-home-assistant-${{ matrix.arch }}-
-
-      # Get python314 from artifact (if rebuilt) or published repo (if skipped)
-      - name: Download python314 artifact
-        if: needs.detect-changes.outputs.build-python314 == 'true'
-        uses: actions/download-artifact@v4
-        with:
-          name: packages-${{ matrix.arch }}-python314
-          path: packages/${{ matrix.arch }}
-
-      - name: Fetch published python314
-        if: needs.detect-changes.outputs.build-python314 != 'true'
-        run: |
-          mkdir -p packages/${{ matrix.arch }}
-          curl -sL "${REPO_URL}/${{ matrix.arch }}/APKINDEX.tar.gz" | tar -xzO APKINDEX > /tmp/APKINDEX
-          pkg_version=$(awk '/^P:python314/{found=1} found && /^V:/{print substr($0,3); exit}' /tmp/APKINDEX)
-          if [[ -n "$pkg_version" ]]; then
-            pkg_file="python314-${pkg_version}.apk"
-            echo "Fetching published python314: $pkg_file"
-            curl -sL "${REPO_URL}/${{ matrix.arch }}/${pkg_file}" -o "packages/${{ matrix.arch }}/${pkg_file}"
-          fi
-
-      - name: Generate local repo index
-        run: |
-          if ls packages/${{ matrix.arch }}/*.apk 2>/dev/null | grep -q .; then
-            melange index \
-              --signing-key packages@elohmeier.rsa \
-              --arch ${{ matrix.arch }} \
-              -o packages/${{ matrix.arch }}/APKINDEX.tar.gz \
-              packages/${{ matrix.arch }}/*.apk
-          fi
-
-      - name: Build home-assistant
-        run: |
-          sudo melange build home-assistant.yaml \
-            --arch ${{ matrix.arch }} \
-            --signing-key packages@elohmeier.rsa \
-            --keyring-append packages@elohmeier.rsa.pub \
-            --repository-append packages/ \
-            --out-dir packages/ \
-            --cache-dir cache/ \
-            --generate-index=false
-          sudo chown -R runner:runner packages/ cache/
-
-      - uses: actions/upload-artifact@v4
-        with:
-          name: packages-${{ matrix.arch }}-home-assistant
-          path: packages/${{ matrix.arch }}
-          if-no-files-found: ignore
-
   build-zwave-js-ui:
     needs: detect-changes
     if: needs.detect-changes.outputs.build-zwave-js-ui == 'true'
@@ -1490,7 +1376,7 @@ jobs:
   # Phase 4: Publish to GitHub Pages
   # ===========================================
   publish:
-    needs: [detect-changes, build-prusalink, build-home-assistant-container, build-otbr, build-zap-cli, build-chip-sdk, build-matter-server, build-detect-radio-module, build-gcompat-custom, build-occu, build-occu-java, build-occu-webui, build-pivccu-modules-dkms, build-home-assistant, build-zwave-js-ui, build-python314]
+    needs: [detect-changes, build-prusalink, build-home-assistant-container, build-otbr, build-zap-cli, build-chip-sdk, build-matter-server, build-detect-radio-module, build-gcompat-custom, build-occu, build-occu-java, build-occu-webui, build-pivccu-modules-dkms, build-zwave-js-ui, build-python314]
     if: |
       always() &&
       github.ref == 'refs/heads/main' &&
