--- a/home-assistant-container.yaml
+++ b/home-assistant-container.yaml
@@ -1,7 +1,7 @@
 package:
   name: home-assistant-container
   version: 2026.1.2
-  epoch: 3
+  epoch: 4
   description: "Home Assistant Core running in Podman container"
   copyright:
     - license: Apache-2.0
@@ -11,6 +11,7 @@ package:
       - aardvark-dns
       - netavark
       - squashfs-tools
+      - dbus
   target-architecture:
     - x86_64
     - aarch64
@@ -26,6 +27,10 @@ package:
       adduser homeassistant gpio 2>/dev/null || true
     post-install: |
       #!/bin/sh
+      # Enable dbus (required dependency for container)
+      rc-update add dbus boot 2>/dev/null || true
+      # Start dbus if not running
+      rc-service dbus status >/dev/null 2>&1 || rc-service dbus start 2>/dev/null || true
       echo ""
       echo "=== Home Assistant Container installed ==="
       echo ""
