--- a/home-assistant-container.yaml
+++ b/home-assistant-container.yaml
@@ -1,7 +1,7 @@
 package:
   name: home-assistant-container
   version: 2026.1.2
-  epoch: 5
+  epoch: 6
   description: "Home Assistant Core running in Podman container"
   copyright:
     - license: Apache-2.0
@@ -31,28 +31,25 @@ package:
       rc-update add dbus boot 2>/dev/null || true
       # Start dbus if not running
       rc-service dbus status >/dev/null 2>&1 || rc-service dbus start 2>/dev/null || true
+
+      # Check if running on diskless system and auto-setup
+      if [ -d /media/mmcblk0p1 ] || [ -d /media/sda1 ] || [ -d /media/usb ]; then
+        echo "Diskless system detected. Setting up container image..."
+        /usr/bin/setup-home-assistant-image
+        if [ $? -eq 0 ]; then
+          rc-update add home-assistant-rostore boot 2>/dev/null || true
+          rc-service home-assistant-rostore start 2>/dev/null || true
+        fi
+      fi
+
       echo ""
       echo "=== Home Assistant Container installed ==="
       echo ""
-      echo "Quick start:"
+      echo "Start with:"
       echo "  rc-service home-assistant-container start"
       echo "  rc-update add home-assistant-container default"
       echo ""
-      echo "Config files:"
-      echo "  /etc/conf.d/home-assistant-container    Container options"
-      echo "  /var/lib/homeassistant                  Configuration directory"
-      echo ""
-      echo "Web interface:"
-      echo "  http://HOST:8123"
-      echo ""
-      echo "Container management:"
-      echo "  podman logs -f home-assistant"
-      echo "  podman exec -it home-assistant bash"
-      echo ""
-      echo "Diskless systems (Alpine running from RAM):"
-      echo "  setup-home-assistant-image"
-      echo "  rc-service home-assistant-rostore start"
-      echo "  rc-service home-assistant-container start"
+      echo "Web interface: http://HOST:8123"
       echo ""
 
 environment:
