--- a/home-assistant-container.yaml
+++ b/home-assistant-container.yaml
@@ -1,7 +1,7 @@
 package:
   name: home-assistant-container
   version: 2026.1.2
-  epoch: 6
+  epoch: 7
   description: "Home Assistant Core running in Podman container"
   copyright:
     - license: Apache-2.0
@@ -51,6 +51,13 @@ package:
       echo ""
       echo "Web interface: http://HOST:8123"
       echo ""
+    post-upgrade: |
+      #!/bin/sh
+      # Auto-upgrade container image on diskless systems
+      if [ -d /media/mmcblk0p1 ] || [ -d /media/sda1 ] || [ -d /media/usb ]; then
+        echo "Upgrading Home Assistant container image..."
+        /usr/bin/setup-home-assistant-image --upgrade
+      fi
 
 environment:
   contents:
